egglog-experimental/tests/snapshots/files__proof_unit_unstable_fresh_proof.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
(let t0 (Let (Var "x") (Var "y")))
(Fiat (= t0 t0))
