egglog-experimental/tests/snapshots/files__shared_snapshot_artifact_euf_example.snap
---
source: egglog-experimental/tests/files.rs
assertion_line: 66
expression: snapshot
---
((F 1)
 (X 1)
 (Y 1))
