egglog-experimental/tests/snapshots/files__shared_snapshot_artifact_parameter_shape.snap
---
source: egglog-experimental/tests/files.rs
assertion_line: 66
expression: snapshot
---
((Add 1)
 (Mul 1)
 (Num 3))
