egglog-experimental/tests/snapshots/files__shared_snapshot_artifact_propel_example.snap
---
source: egglog-experimental/tests/files.rs
assertion_line: 66
expression: snapshot
---
((A 1)
 (B 1)
 (C 1)
 (D 1)
 (E 1)
 (F 1)
 (Fn 1)
 (G 0)
 (H 0)
 (I 0))
