egglog-experimental/tests/snapshots/files__shared_snapshot_congruence.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
((@disequality-contradiction 1)
 (@disequality-ne-Term 1)
 (A 1)
 (B 1)
 (f 1))
