egglog-experimental/tests/snapshots/files__shared_snapshot_congruence_ee_desugared.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
((A 1)
 (B 1)
 (____disequality-contradiction 1)
 (f 1))
