egglog-experimental/tests/snapshots/files__shared_snapshot_congruence_nee_desugared.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
((A 1)
 (B 1)
 (___disequality-contradiction 1)
 (___disequality-ne-Term 1)
 (f 1))
