egglog-experimental/tests/snapshots/files__shared_snapshot_dialegg_nmm40.snap
---
source: egglog-experimental/tests/files.rs
assertion_line: 66
expression: snapshot
---
(extraction-costs 1860822)
((ArrayAttr 0)
 (Blk 0)
 (Complex 0)
 (DenseFPElementsAttr 0)
 (DenseFloatArrayAttr 0)
 (DenseIntArrayAttr 0)
 (DenseIntElementsAttr 0)
 (F128 0)
 (F16 0)
 (F32 0)
 (F64 0)
 (F80 0)
 (FloatAttr 0)
 (Function 0)
 (I1 0)
 (I16 0)
 (I32 1)
 (I4 0)
 (I64 0)
 (I8 0)
 (Index 0)
 (Int 0)
 (IntegerAttr 0)
 (NamedAttr 0)
 (NoAttr 0)
 (NoOp 0)
 (None 1)
 (OpaqueAttr 0)
 (OpaqueOp 0)
 (OpaqueType 0)
 (OtherInt 0)
 (RankedTensor 705)
 (Reg 0)
 (SInt 0)
 (StringAttr 0)
 (SymbolRefAttr 0)
 (Tuple 0)
 (TypeAttr 0)
 (UInt 0)
 (UnitAttr 0)
 (UnrankedTensor 0)
 (Value 42)
 (ValueAttr 0)
 (Vector 0)
 (cost_table_linalg_matmul 11480)
 (dims 0)
 (linalg_matmul 11480)
 (ncols 705)
 (nrows 705)
 (tensor_empty 679)
 (type-of 862))
