egglog-experimental/tests/snapshots/files__shared_snapshot_euf_sat.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
((Atom 2)
 (x 1)
 (y 1)
 (z 1))
