egglog-experimental/tests/snapshots/files__shared_snapshot_paper_figure_2.snap
---
source: egglog-experimental/tests/files.rs
assertion_line: 66
expression: snapshot
---
((A 1)
 (B 1)
 (F 1))
