egglog-experimental/tests/snapshots/files__shared_snapshot_rules.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
((@disequality-contradiction 1)
 (@disequality-ne-Other 1)
 (@disequality-ne-Term 1)
 (A 1)
 (B 1)
 (Pair 1)
 (X 1)
 (Y 1))
